tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/string-bs.stderr
TOML parse error at line 1, column 23
  |
1 | string-bs = "backspace"
  |                       ^
invalid basic string
